[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/huds/you_died_screen/assets/GUI.png" type="Texture" id=1]
[ext_resource path="res://gui/screens/main_menu/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/screens/main_menu/assets/GUI.png" type="Texture" id=3]
[ext_resource path="res://gui/huds/you_died_screen/assets/MinimalPixel v2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/huds/you_died_screen/scripts/YouDiedPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=11]
size = 90
outline_size = 3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )
modulate_color = Color( 1, 0.976471, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YouDiedPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YouDiedPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.768627, 0.0901961, 0.0901961, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YouDiedPanel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "background_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.768627, 0.0901961, 0.0901961, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YouDiedPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "panel_animation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YouDiedPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ), Vector2( 960, 520 ), Vector2( 960, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.691765, 0.0811765, 0.0811765, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YouDiedPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YouDiedPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "focus"
} ]
}

[node name="YouDiedScreen" type="Control"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.768627, 0.0901961, 0.0901961, 1 )

[node name="YouDiedPanel" type="Control" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Sprite" parent="YouDiedPanel"]
scale = Vector2( 15, 15 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2.01305, 33.9793, 44.0797, 44.0797 )

[node name="YouDiedTitle" type="Label" parent="YouDiedPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -263.0
margin_top = -204.0
margin_right = 264.0
margin_bottom = -104.0
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "YOU DIED"
align = 1
valign = 1

[node name="YouDiedMessage" type="Label" parent="YouDiedPanel"]
margin_left = -219.0
margin_top = -89.0
margin_right = 233.0
margin_bottom = -49.0
custom_fonts/font = SubResource( 12 )
text = "Try harder ma brudda"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="YouDiedPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = 7.0
margin_right = 151.0
margin_bottom = 240.0
alignment = 1

[node name="RetryButton" type="Button" parent="YouDiedPanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "RETRY"

[node name="MenuButton" type="Button" parent="YouDiedPanel/VBoxContainer"]
margin_top = 79.0
margin_right = 300.0
margin_bottom = 154.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "BACK TO MENU"

[node name="QuitButton" type="Button" parent="YouDiedPanel/VBoxContainer"]
margin_top = 158.0
margin_right = 300.0
margin_bottom = 233.0
rect_min_size = Vector2( 300, 75 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/background_fade_in = SubResource( 24 )
anims/panel_animation = SubResource( 14 )

[connection signal="pressed" from="YouDiedPanel/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="YouDiedPanel/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="YouDiedPanel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
